fixing text bugs, cancel button and image cropping to be more proper

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -456,8 +456,8 @@ body {
 
 .pokemon-rarity {
     position: absolute;
-    bottom: 15px;
-    right: 20px;
+    bottom: 5px;
+    right: 10px;
     font-size: 14px;
     z-index: 3;
 }
